<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ce04.java2.backaryan.backaryan_ce04.fragments.FormFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/firstNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lastNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/employeeIdEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:inputType="number"
            android:hint="@string/employee_num" />

        <EditText
            android:id="@+id/hireDateEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:inputType="date"
            android:hint="@string/date_format" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/employmentStatusEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:inputType="textPersonName"
            android:hint="@string/employment_status"/>

        <Button
            android:text="@string/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            android:layout_weight=".5" />


    </LinearLayout>


</LinearLayout>
