<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/firstNameList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />

        <TextView
            android:id="@+id/lastNameList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/last_name" />
    </LinearLayout>

    <TextView
        android:text="@string/employment_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choice" />

</LinearLayout>