<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ce04.java2.backaryan.backaryan_ce04.fragments.DetailsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="9"
            android:text="@string/first_name" />

        <TextView
            android:id="@+id/firstNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="9"
            android:paddingStart="5dp"
            android:text="@string/first_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="9"
            android:paddingStart="5dp"
            android:text="@string/last_name" />

        <TextView
            android:id="@+id/lastNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="9"
            android:paddingStart="5dp"
            android:text="@string/last_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="9"
            android:text="@string/employee_num" />

        <TextView
            android:id="@+id/employeeNumView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="9"
            android:paddingStart="5dp"
            android:text="@string/employee_num" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="9"
            android:paddingStart="5dp"
            android:text="@string/hire_date" />

        <TextView
            android:id="@+id/hireDateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="9"
            android:paddingStart="5dp"
            android:text="@string/hire_date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="9"
            android:text="@string/employment_status" />

        <TextView
            android:id="@+id/employmentStatusView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="9"
            android:paddingStart="5dp"
            android:text="@string/employment_status" />

    </LinearLayout>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_button" />


</LinearLayout>
